# helpers

Elastic-template/pythonProject7/: SearchApi.py  main.py  pyproject.toml  search.py
Elastic-template/pythonProject7/NewData/: 2024-09-13T00:00:00.000Z_to_2024-09-16T23:59:59.000Z.json
Elastic-templtae-with-slope/fastApiProject6/: .gitignore  Ebook.py  ElasticSearch.py  NewChapters.py  README.md  Syninom.py  creating_index_es.py  main.py
RAG_with_chroma/pythonProject/: embeddings.py  main.py  pyproject.toml  query.py
RAG_with_chroma/pythonProject/chroma/: chroma.sqlite3
RAG_with_chroma/pythonProject/chromao/: chroma.sqlite3
Sementic-search/fastApiProject6/: NewChapters.py  Ranking.py
Using-LLama/fastApiProject6/: ElasticSearch.py  pyproject.toml
