[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["sarohy <a.h.sarohy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.6"
pypdf = "^5.1.0"
chromadb = "^0.5.16"
boto3 = "^1.35.52"
pytest = "^8.3.3"
langchain-community = "^0.3.4"
transformers = "^4.46.1"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
