[tool.poetry]
name = "fastapiproject6"
version = "0.1.0"
description = ""
authors = ["mamdoot222 <a.h.sarohy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
torch = "^2.4.1"
tika = "^2.6.0"
pymongo = "^4.9.1"
python-dotenv = "^1.0.1"
transformers = "^4.44.2"
groq = "^0.11.0"
nltk = "^3.9.1"
elasticsearch = "^8.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
